#3 Add docs for files, readme,pre-commit.sample

--- a/utilities/pre-commit.sample
+++ b/utilities/pre-commit.sample
@@ -7,4 +7,4 @@
 #
 # To enable this hook, rename this file to "pre-commit".
 
-C:/Users/nosov/AppData/Local/Programs/Python/Python36-32/python.exe  C:/Users/nosov/PycharmProjects/format_test/.git/hooks/pre-commit.py --check
+PATH/python.exe  PATH/utilities/pre-commit.py --check
