#1 Configure backend environments

--- a/docker-compose.env.yml
+++ b/docker-compose.env.yml
@@ -1,10 +1,11 @@
-version: '3'
+version: '2.1'
 services:
   nginx:
     build: .
     container_name: nginx
     ports:
       - "80:80"
+      - "8000:8000"
     volumes:
       - ./app:/app
       - ./config/nginx:/etc/nginx/conf.d
@@ -18,10 +19,13 @@ services:
 
   web:
     build: .
-    command: python3 manage.py runserver 0.0.0.0:8000
+    environment:
+      ENV: ENV 
     volumes:
-      - ./app:/code
+      - ./app:/app
     ports:
-      - "8000:8000"
+      - "9090:9090"
     depends_on:
+      - db
+    links:
       - db
