--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,18 +1,19 @@
-version: '3'
-
+version: '2.1'
 services:
-   
   db:
     image: postgres
     ports:
       - "5432:5432"
     
   web:
-    build: .
-    command: python3 manage.py runserver 0.0.0.0:8000
+    build: . 
+    environment:
+      ENV: DEV 
     volumes:
       - ./app:/code
     ports:
       - "8000:8000"
     depends_on:
+      - db
+    links:
       - db
