#14 added script for waiting to initialize data base for development and production servers

--- a/backend_application/docker-compose.env.yml
+++ b/backend_application/docker-compose.env.yml
@@ -20,7 +20,8 @@ services:
   web:
     build: .
     environment:
-      ENV: ENV 
+      ENV: ENV
+    command: ["/wait-postgres.sh","db:5432","-t", "60","--","/cmd.sh"] 
     volumes:
       - ./app:/app
     ports:
