--- a/backend_application/Dockerfile
+++ b/backend_application/Dockerfile
@@ -11,10 +11,12 @@ RUN pip install -r /config/requirements.txt
 WORKDIR /app
 COPY app /app
 COPY cmd.sh /
+COPY wait-postgres.sh /
+
 
 EXPOSE 9090 9191
 EXPOSE 8080 8080
 EXPOSE 8000 8000
 USER uwsgi
 
-CMD ["/cmd.sh"]
+
