--- a/backend_application/docker-compose.dev.yml
+++ b/backend_application/docker-compose.dev.yml
@@ -1,3 +1,4 @@
+
 version: '2.1'
 services:
   db:
@@ -8,7 +9,8 @@ services:
   web:
     build: . 
     environment:
-      ENV: DEV 
+      ENV: DEV
+    command: ["/wait-postgres.sh","db:5432","-t", "60","--","/cmd.sh"] 
     volumes:
       - ./app:/app
     ports:
