--- a/backend_application/config/nginx/nginx.conf
+++ b/backend_application/config/nginx/nginx.conf
@@ -1,13 +1,20 @@
-upstream web {
-  ip_hash;
-  server web:80;
-}
 
-# portal
 server {
-  location / {
-        proxy_pass http://web/;
+
+    listen 8080;
+    server_name localhost;
+    charset utf-8;
+
+    location /static {
+        alias /app/woogle/static;
+
     }
-  listen 80;
-  server_name localhost;
+
+    location / {
+      include /app/woogle//uwsgi_params;
+      proxy_pass http://web:8000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
