--- a/backend_application/docker-compose.env.yml
+++ b/backend_application/docker-compose.env.yml
@@ -1,17 +1,17 @@
 version: '2.1'
 services:
   nginx:
-    build: .
+    restart: always
+    image: nginx
     container_name: nginx
     ports:
-      - "8000:9090"
-      - "9191:9191"
+      - "8080:8080"
     volumes:
       - ./app:/app
       - ./config/nginx:/etc/nginx/conf.d
     links:
       - web
-   
+    
   db:
     image: postgres
     ports:
@@ -25,8 +25,7 @@ services:
     volumes:
       - ./app:/app
     ports:
-      - "9090:9090"
-      - "80:80"
+      - "8000:8000"
     depends_on:
       - db
     links:
