--- a/elastic/rest_api/config/es_settings.json
+++ b/elastic/rest_api/config/es_settings.json
@@ -1,19 +1,18 @@
-
 {
   "settings" : {
         "index" : {
-            "number_of_shards" : 4, 
+            "number_of_shards" : 4,
             "number_of_replicas" : 2
         },
         "analysis": {
           "filter": {
             "russian_stop": {
               "type":       "stop",
-              "stopwords":  "_russian_" 
+              "stopwords":  "_russian_"
             },
             "russian_keywords": {
               "type":       "keyword_marker",
-              "keywords":   ["статья"] 
+              "keywords":   ["статья"]
             },
             "russian_stemmer": {
               "type":       "stemmer",
@@ -21,11 +20,11 @@
             },
             "english_stop": {
               "type":       "stop",
-              "stopwords":  "_english_" 
+              "stopwords":  "_english_"
              },
             "english_keywords": {
               "type":       "keyword_marker",
-              "keywords":   ["page"] 
+              "keywords":   ["page"]
             },
             "english_stemmer": {
               "type":       "stemmer",
@@ -34,6 +33,11 @@
             "english_possessive_stemmer": {
               "type":       "stemmer",
              "language":   "possessive_english"
+            },
+            "autocomplete_filter": {
+              "type": "edge_ngram",
+              "min_gram": 1,
+              "max_gram": 20
             }
           },
           "analyzer": {
@@ -55,6 +59,14 @@
                 "english_keywords",
                 "english_stemmer"
               ]
+            },
+            "autocomplete": {
+              "type": "custom",
+              "tokenizer": "standard",
+              "filter": [
+                "lowercase",
+                "autocomplete_filter"
+              ]
             }
           }
       }
@@ -63,12 +75,15 @@
     "page": {
       "properties": {
         "pageid": { "type": "integer" },
-        "title": { "type": "keyword" },
+        "title": {
+            "type": "completion",
+            "analyzer": "autocomplete"
+         },
         "content": { "type": "text" },
         "url": { "type": "keyword" },
         "stash":  { "type": "object", "dynamic":  true }
       }
     }
-  }  
-  
+  }
+
 }
