backend & elastic(with restful api) v:0.1

--- a/backend_application/docker-compose.env.yml
+++ b/backend_application/docker-compose.env.yml
@@ -11,14 +11,26 @@ services:
       - ./config/nginx:/etc/nginx/conf.d
     links:
       - web
+    expose:
+      - 5000
+    networks:
+      network:
+        aliases:
+          - nginx.network_elastic_backend
     
   db:
     image: postgres
+    container_name: postgres
     ports:
       - "5432:5432"
+    networks:
+      network:
+        aliases:
+          - db.network_elastic_backend
 
   web:
     build: .
+    container_name: django_web
     environment:
       ENV: ENV
     command: ["/wait-postgres.sh","db:5432","-t", "60","--","/cmd.sh"] 
@@ -29,4 +41,15 @@ services:
     depends_on:
       - db
     links:
-- db
+      - db
+    expose:
+      - 5000
+    networks:
+      network:
+        aliases:
+          - web.network_elastic_backend
+
+networks:
+  network:
+    external:
+      name: network_elastic_backend
