--- a/elastic/docker-compose.yml
+++ b/elastic/docker-compose.yml
@@ -29,8 +29,9 @@ services:
     container_name: elasticsearch
     environment:
       - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m -Des.enforce.bootstrap.checks=true"
+      - bootstrap.memory_lock=false
+      - xpack.security.enabled=false
     ulimits:
       memlock:
         soft: -1
