#75 crawler, connector and django has united

--- a/wiki_indexer/app.ini
+++ b/wiki_indexer/app.ini
@@ -1,5 +1,5 @@
 [DataBase]
-dbName=postgresql:///test
+dbName=postgresql://postgres:qwerty123@localhost:5432/test
 dbTable=wikisearch_article
 
 [Elasticsearch]
