# fixed connection wiki indexer

--- a/wiki_indexer/app.ini
+++ b/wiki_indexer/app.ini
@@ -1,5 +1,5 @@
 [DataBase]
-dbName=postgresql://postgres:qwerty123@localhost:5432/test
+dbName=postgresql://postgres:qwerty123@localhost:5432/postgres
 dbTable=wikisearch_article
 
 [Elasticsearch]
