--- a/wiki_indexer/Dockerfile
+++ b/wiki_indexer/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 ADD . /app
 
 # Install any needed packages specified in requirements.txt
+RUN pip install psycopg2-binary
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 #RUN pip install  -r requirements.txt
