--- a/wiki_indexer/docker-compose.yml
+++ b/wiki_indexer/docker-compose.yml
@@ -1,9 +1,10 @@
 version: "2"
 services:
   web:
+    network_mode: host
     build: .
     ports:
-      - "5000:80"
+      - "9999:9999"
     volumes:
        -  .:/code
 
