--- a/backend_application/docker-compose.env.yml
+++ b/backend_application/docker-compose.env.yml
@@ -27,13 +27,15 @@ services:
       network:
         aliases:
           - db.network_elastic_backend
+    volumes:
+      - ./db-backups:/backups
 
   web:
     build: .
     container_name: django_web
     environment:
       ENV: ENV
-    command: ["/wait-postgres.sh","db:5432","-t", "60","--","/cmd.sh"] 
+    command: ["/wait-postgres.sh","db:5432","-t", "60","--","/cmd.sh"]
     volumes:
       - ./app:/app
     ports:
