--- a/backend_application/Dockerfile
+++ b/backend_application/Dockerfile
@@ -12,6 +12,8 @@ WORKDIR /app
 COPY app /app
 COPY cmd.sh /
 COPY wait-postgres.sh /
+COPY backup.sh /
+RUN 0 * * * * backup.sh
 
 
 EXPOSE 8080 8080
