--- a/backend_application/docker-compose.dev.yml
+++ b/backend_application/docker-compose.dev.yml
@@ -10,6 +10,8 @@ services:
       network:
         aliases:
           - db.network_elastic_backend
+    volumes:
+      - ./db-backups:/backups
     
   web:
     build: .
