current working versions of services

--- a/crawler/docker-compose.yml
+++ b/crawler/docker-compose.yml
@@ -1,10 +1,16 @@
-version: '3'
+version: '2'
 services:
   downloading:
     build: .
-    command: ["python","app.py",'-o','db','--loglevel','INFO','--concurrency','4','--host','0.0.0.0']
+    command: ["python","app.py",'-o','db','--loglevel','DEBUG','--concurrency','4','--host','0.0.0.0']
+    networks:
+      network:
+        aliases:
+          - downloading.network_elastic_backend
 
-
-
+networks:
+  network:
+    external:
+      name: network_elastic_backend
 
 
