--- a/elastic/rest_api/config/es_settings.json
+++ b/elastic/rest_api/config/es_settings.json
@@ -78,6 +78,7 @@
             "type": "completion",
             "analyzer": "autocomplete"
          },
+        "pageid": { "type": "integer" },
         "url": { "type": "keyword" },
         "content": { "type": "text" },
         "page_rank": { "type": "float" },
