--- a/backend_application/config/requirements.txt
+++ b/backend_application/config/requirements.txt
@@ -1,3 +1,8 @@
 Django==2.0.5
 psycopg2==2.7.5
-requests
+requests==2.19.1
+numpy==1.15.0
+scrapy==1.5.1
+twisted==18.7.0
+beautifulsoup4==4.6.3
+sqlalchemy==1.2.10
