--- a/wiki_indexer/docker-compose.yml
+++ b/wiki_indexer/docker-compose.yml
@@ -1,9 +1,18 @@
 version: "2"
 services:
-  web:
+  indexer:
+    container_name: indexer
     build: .
     ports:
-      - "5000:80"
+      - "9999:9999"
     volumes:
        -  .:/code
+    networks:
+      network:
+        aliases:
+          - indexer.network_elastic_backend
 
+networks:
+  network:
+    external:
+      name: network_elastic_backend
