--- a/backend_application/docker-compose.env.yml
+++ b/backend_application/docker-compose.env.yml
@@ -27,6 +27,8 @@ services:
       network:
         aliases:
           - db.network_elastic_backend
+    volumes:
+      - ./db-backups:/backups
 
   web:
     build: .
