--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -1,6 +1,6 @@
-argparse==1.1
-Scrapy==1.5.0
-beautifulsoup4==4.6.0
-SQLAlchemy==1.2.10
-psycopg2==2.7.5
+sqlalchemy==1.2.10
+scrapy==1.5.1
 requests==2.19.1
+numpy==1.15.0
+beautifulsoup4==4.6.3
+psycopg2==2.7.5
