--- a/wiki_indexer/app.ini
+++ b/wiki_indexer/app.ini
@@ -1,10 +1,10 @@
 [DataBase]
-dbName=postgresql://postgres:qwerty123@localhost:5432/postgres
+dbName=postgresql://postgres:password@postgres:5432/crawler_bd
 dbTable=wikisearch_article
 
 [Elasticsearch]
-index=test
-doc_type=article
+index=wiki
+doc_type=page
 
 [DEFAULT]
 threadsNumber=20
